syntax = "proto3";
package pb.story;
option go_package = "pb/story";

message FindByIDRequest {
  int64 id = 1;
}

message FindAllRequest {
  int64 page = 1;
  int64 size = 2;
}